<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center"
    tools:context=".ui.dialog.SuccessDialog">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_16">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/margin_10"
            android:paddingBottom="@dimen/margin_30">

            <ImageView
                android:id="@+id/imgSuccessDialogFragmentIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_30"
                android:src="@drawable/ic_success"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvSuccessDialogFragmentTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_16"
                android:text="@string/text_success_payment_title"
                android:textSize="@dimen/size_24"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imgSuccessDialogFragmentIcon" />

            <TextView
                android:id="@+id/tvSuccessDialogFragmentSubTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_16"
                android:layout_marginTop="@dimen/margin_16"
                android:gravity="center"
                android:text="@string/text_success_payment_subtitle"
                android:textSize="@dimen/size_16"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvSuccessDialogFragmentTitle" />

            <TableLayout
                android:id="@+id/tlSuccessDialogFragmentSummaryContainer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_16"
                android:layout_marginTop="@dimen/margin_30"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvSuccessDialogFragmentSubTitle">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/tvSuccessDialogFragmentAmountEntered"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:textStyle="bold"
                        android:text="@string/textAmountEnteredSummary"
                        android:textSize="@dimen/size_16" />

                    <TextView
                        android:id="@+id/tvSuccessDialogFragmentAmountEnteredValue"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textSize="@dimen/size_16"
                        tools:text="$100.000" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/tvSuccessDialogFragmentPaymentMethod"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:textStyle="bold"
                        android:text="@string/textPaymentMethodSelected"
                        android:textSize="@dimen/size_16" />

                    <TextView
                        android:id="@+id/tvSuccessDialogFragmentPaymentMethodValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textSize="@dimen/size_16"
                        tools:text="Visa" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/tvSuccessDialogFragmentBank"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:textStyle="bold"
                        android:text="@string/textPaymentBankSelected"
                        android:textSize="@dimen/size_16" />

                    <TextView
                        android:id="@+id/tvSuccessDialogFragmentBankValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textSize="@dimen/size_16"
                        tools:text="Banco de Chile" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/tvSuccessDialogFragmentNumberFee"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:textStyle="bold"
                        android:text="@string/textPaymentNumberFeeSelected"
                        android:textSize="@dimen/size_16" />

                    <TextView
                        android:id="@+id/tvSuccessDialogFragmentNumberFeeValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textSize="@dimen/size_16"
                        tools:text="3" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/tvSuccessDialogFragmentFeeAmount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:textStyle="bold"
                        android:text="@string/textPaymentFeeAmount"
                        android:textSize="@dimen/size_16" />

                    <TextView
                        android:id="@+id/tvSuccessDialogFragmentFeeAmountValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textSize="@dimen/size_16"
                        tools:text="15.000" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/tvSuccessDialogFragmentTotalAmount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:textStyle="bold"
                        android:text="@string/textPaymentTotalAmount"
                        android:textSize="@dimen/size_16" />

                    <TextView
                        android:id="@+id/tvSuccessDialogFragmentTotalAmountValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textSize="@dimen/size_16"
                        tools:text="500.000" />
                </TableRow>
            </TableLayout>

            <TextView
                android:id="@+id/tvSuccessDialogFragmentTransactionId"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_16"
                android:layout_marginTop="@dimen/margin_40"
                android:text="@string/textPaymentTransactionId"
                android:textSize="@dimen/size_10"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tlSuccessDialogFragmentSummaryContainer"
                tools:text="Id de transaccion:\nAQokODllZjQyNjktYjAzMy00OWU1LWJhMWQtNDE0NjQyNTM3MzY4EJaFuevHLg" />

            <Button
                android:id="@+id/btnSuccessDialogFragmentAccept"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_16"
                android:layout_marginTop="@dimen/margin_40"
                android:text="@string/text_accept"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvSuccessDialogFragmentTransactionId" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </RelativeLayout>
</LinearLayout>